--- a/html/common/script.html
+++ b/html/common/script.html
@@ -1,4 +1,2 @@
-<script src="./assets/jquery/jquery.min.js"></script>
-<script src="./assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="./assets/nprogress/nprogress.js"></script>
-<script src="./js/common.js"></script>
+<script src="/lib/requirejs/require.min.js" data-main='/js/main.js'></script>
+
